fix(Dockerfile-search): change commit sha selection in pull-request context

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Find all modified directories with Dockerfiles
         id: find-dockerfiles
         run: |
-          dockerfiles=$(./scripts/findDockerfiles.sh "${{ github.event.before }}" "${{ github.sha }}")
+          dockerfiles=$(./scripts/findDockerfiles.sh "${{ github.event.pull_request.base.sha }}" "${{ github.event.pull_request.head.sha }}")
           echo "dockerfiles=$dockerfiles" >> $GITHUB_OUTPUT
 
   build-docker-images:
