chore(provisioning): configure Keycloak realm, user profile and custom protocol mapper
- Disable default required actions.
- Define 'custom_user_id' in the user profile.
- Create protocol mapper for 'custom_user_id'.

--- a/infrastructure/authentication/Dockerfile-keycloak-provision
+++ b/infrastructure/authentication/Dockerfile-keycloak-provision
@@ -2,4 +2,8 @@ FROM quay.io/keycloak/keycloak:26.4
 
 COPY ./infrastructure/authentication/provision.sh /opt/keycloak/provision.sh
 
+COPY ./infrastructure/authentication/user-profile.json /opt/keycloak/user-profile.json
+
+COPY ./infrastructure/authentication/custom-user-id-mapper.json /opt/keycloak/custom-user-id-mapper.json
+
 ENTRYPOINT ["/opt/keycloak/provision.sh"]
