chore(workflows): update auto-i18n to v1.6.0

--- a/.github/workflows/auto-i18n.yml
+++ b/.github/workflows/auto-i18n.yml
@@ -2,9 +2,9 @@ name: Auto Translate i18n
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - feature/frontend-service
+  push:
+    branches:
+      - feature/frontend-service
 
 permissions:
   contents: write
@@ -18,10 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Translate i18n files
-        uses: eventonight/auto-i18n@v1.5.0
+        uses: eventonight/auto-i18n@v1.6.0
         with:
           source: 'en'
           targets: 'it,fr,de,es'
           input_file: 'services/frontend/src/i18n/locales/en.ts'
           npm_working_directory: 'services/frontend'
-          pre-commit-npm-command: 'lint:fix'
+          pre_commit_npm_command: 'lint:fix'
