--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -27,6 +27,7 @@ jobs:
           files: |
             services/events/build/reports/jacoco/test/jacocoTestReport.xml
             services/media/coverage/lcov.info
+            services/interactions/coverage/lcov.info
           flags: unittests
           fail_ci_if_error: true
       
