chore(users): integrate jacoco

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: |
+            services/users/build/reports/jacoco/test/jacocoTestReport.xml
             services/events/build/reports/jacoco/test/jacocoTestReport.xml
             services/media/coverage/lcov.info
             services/interactions/coverage/lcov.info
