--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - RABBITMQ_PORT=${RABBITMQ_PORT}
       - MONGO_HOST=mongo-users
       - USERS_SERVICE_SECRET=${USERS_SERVICE_SECRET}
-      - KEYCLOAK_URL="http://keycloak:8080"
+      - KEYCLOAK_URL=http://keycloak:8080
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.users.rule=Host(`users.${HOST}`)"
