chore(payments): setup payment-service with stripe

--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,10 @@ RABBITMQ_PASS=
 RABBITMQ_PORT=5672
 CHAT_SERVICE_PORT=9040
 MONGO_EXPRESS_CHAT_PORT=9041
+# Payments Service
+PAYMENTS_SERVICE_PORT=9040
+MONGO_EXPRESS_PAYMENTS_PORT=9041
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+RESERVATION_TTL_MINUTES=10
