--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -27,7 +27,8 @@
     "vue": "^3.5.22",
     "vue-advanced-cropper": "^2.8.9",
     "vue-i18n": "^9.14.5",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-emoji-picker": "^1.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
